--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^49.0.23",
+    "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.72.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.17.0",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
