--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.12.1",
+    "expo-blur": "~12.9.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
