--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@react-native-community/blur": "^4.4.0",
     "axios": "^1.6.8",
-    "expo": "^50.0.15",
-    "expo-blur": "^12.9.2",
-    "expo-constants": "^15.4.5",
-    "expo-linking": "~6.2.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^49.0.23",
+    "expo-blur": "~12.4.1",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
